httpbin/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress-gateway
      namespace: istio-system
  hostnames:
    - api.anyongtech.cn
    - 10.136.191.31
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /httpbin
      backendRefs:
        - kind: Service
          name: httpbin-service
          namespace: default
          port: 80
